--- a/templates/success.html
+++ b/templates/success.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
- <h1> Welcome, {{userName}} </h1>
+ <h1> Welcome, {{Name}} </h1>
 <form action='/success' method='GET'>
 
 
